"""Initial migration

Revision ID: initial_migration
Revises:
Create Date: 2024-01-01 00:00:00.000000

"""
from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision: str = 'initial_migration'
down_revision: Union[str, None] = None
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('activities',
                    sa.Column('id', sa.Integer(), nullable=False),
                    sa.Column('name', sa.String(255), nullable=False),
                    sa.Column('parent_id', sa.Integer(), nullable=True),
                    sa.Column('level', sa.Integer(), nullable=False),
                    sa.ForeignKeyConstraint(
                        ['parent_id'], ['activities.id']
                    ),
                    sa.PrimaryKeyConstraint('id')
                    )
    op.create_index(
        op.f('ix_activities_id'), 'activities', ['id'], unique=False
    )
    op.create_index(
        op.f('ix_activities_name'), 'activities', ['name'], unique=False
    )

    op.create_table('buildings',
                    sa.Column('id', sa.Integer(), nullable=False),
                    sa.Column('address', sa.Text(), nullable=False),
                    sa.Column('latitude', sa.Float(), nullable=False),
                    sa.Column('longitude', sa.Float(), nullable=False),
                    sa.PrimaryKeyConstraint('id')
                    )
    op.create_index(
        op.f('ix_buildings_id'), 'buildings', ['id'], unique=False
    )
    op.create_index(
        op.f('ix_buildings_address'), 'buildings', ['address'], unique=False
    )

    op.create_table('organizations',
                    sa.Column('id', sa.Integer(), nullable=False),
                    sa.Column('name', sa.String(255), nullable=False),
                    sa.Column('building_id', sa.Integer(), nullable=False),
                    sa.ForeignKeyConstraint(
                        ['building_id'], ['buildings.id']
                    ),
                    sa.PrimaryKeyConstraint('id')
                    )
    op.create_index(
        op.f('ix_organizations_id'), 'organizations', ['id'], unique=False
    )
    op.create_index(
        op.f('ix_organizations_name'), 'organizations', ['name'], unique=False
    )

    op.create_table('organization_phones',
                    sa.Column('id', sa.Integer(), nullable=False),
                    sa.Column('phone_number', sa.String(50), nullable=False),
                    sa.Column('organization_id', sa.Integer(), nullable=False),
                    sa.ForeignKeyConstraint(
                        ['organization_id'], ['organizations.id']
                    ),
                    sa.PrimaryKeyConstraint('id')
                    )

    op.create_table('organization_activities',
                    sa.Column('organization_id', sa.Integer(), nullable=False),
                    sa.Column('activity_id', sa.Integer(), nullable=False),
                    sa.ForeignKeyConstraint(
                        ['activity_id'], ['activities.id']
                    ),
                    sa.ForeignKeyConstraint(
                        ['organization_id'], ['organizations.id']
                    ),
                    sa.PrimaryKeyConstraint('organization_id', 'activity_id')
                    )
    # ### end Alembic commands ###


def downgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table('organization_activities')
    op.drop_table('organization_phones')
    op.drop_index(
        op.f('ix_organizations_name'), table_name='organizations'
    )
    op.drop_index(
        op.f('ix_organizations_id'), table_name='organizations'
    )
    op.drop_table('organizations')
    op.drop_index(
        op.f('ix_buildings_address'), table_name='buildings'
    )
    op.drop_index(
        op.f('ix_buildings_id'), table_name='buildings'
    )
    op.drop_table('buildings')
    op.drop_index(
        op.f('ix_activities_name'), table_name='activities'
    )
    op.drop_index(
        op.f('ix_activities_id'), table_name='activities'
    )
    op.drop_table('activities')
    # ### end Alembic commands ###
